创建课程模块,优化代码